<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EinstellungenActivity">

    <TextView
        android:id="@+id/einstellungenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="15dp"
        android:text="@string/einstellungenTitle"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zurueckButton"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="50dp"
        android:onClick="einstellungenOnClick"
        android:text="@string/zurueckNotizenButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zurueckButton"
        app:srcCompat="@drawable/logo" />

    <Switch
        android:id="@+id/securityManagerSwitch"
        android:layout_width="338dp"
        android:layout_height="45dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/securityAgent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/lokalSwitch"
        android:layout_width="338dp"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="14dp"
        android:text="@string/bildLokalSpeichern"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/securityManagerSwitch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="375dp"
        android:layout_height="39dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:ems="15"
        android:inputType="textPersonName"
        android:text="@string/deineEmail"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lokalSwitch" />

    <EditText
        android:id="@+id/emailTextfield"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/exampleEmail"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/AnzVersuche"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/anzVersuche"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextfield" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="152dp"
        android:layout_height="50sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toEndOf="@+id/AnzVersuche"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/pwAendernButtonEIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="33dp"
        android:onClick="passwortAendernOnClick"
        android:text="Passwort ändern"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnzVersuche" />

</androidx.constraintlayout.widget.ConstraintLayout>