<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotizenActivity">

    <TextView
        android:id="@+id/dataManagerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        android:text="@string/data_manager"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataManagerTitle"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="339dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#6804EC"
        android:clickable="true"
        android:contentDescription="@string/settings"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_icon" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="11dp"
        android:ems="14"
        android:inputType="textPersonName"
        android:text="@string/notizen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/speichernButton"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="11dp"
        android:text="@string/speichern"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName6"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="411dp"
        android:layout_height="310dp"
        android:layout_marginTop="3dp"
        android:hint="@string/schreibe_hier"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

</androidx.constraintlayout.widget.ConstraintLayout>